--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "graph build generated/sample.subgraph.yaml",
     "codegen": "graph codegen generated/sample.subgraph.yaml",
-    "deploy": "graph deploy --ipfs https://api.thegraph.com/ipfs/  --node https://api.thegraph.com/deploy/ sarahschwartz/mva generated/sample.subgraph.yaml"
+    "deploy": "graph deploy --ipfs https://api.thegraph.com/ipfs/  --node https://api.thegraph.com/deploy/ sarahzdev/graph-hack-test generated/sample.subgraph.yaml"
   },
   "keywords": [],
   "author": "",
